# raytracing

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.MD  appveyor.yml  build.sh  run.sh
src/: CMakeLists.txt  aabb.h  box.h  bvhnode.h  camera.h  color.h  constantmedium.h  hitable.h  hitablelist.h  image.h  main.cpp  material.h  movingsphere.h  noisetexture.h  parser.h  perlin.h  ray.h  rect.h  simd.h  sphere.h  texture.h  vec3.h
tests/src/: test_color.cpp  test_vec3.cpp
